benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_DivMod_ModExpPow2_iter4_error.log
=== Verification Error - Iteration 4 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_DivMod_ModExpPow2.rs
Time: 2025-09-15 11:03:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:61:9
   |
61 |         1 % m
   |         ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
61 |         1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> % m
   |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:81:21
   |
81 |     while current > 0
   |           -------   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:85:30
   |
85 |         let quot = current / 2;
   |                    -------   ^ expected `nat`, found integer
   |                    |
   |                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:86:29
   |
86 |         let rem = current % 2;
   |                   -------   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:87:33
   |
87 |         let c: char = if rem == 0 { '0' } else { '1' };
   |                          ---    ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.

--------------------------------------------------------------------------------

Additional Output:
error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:61:9
   |
61 |         1 % m
   |         ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
61 |         1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> % m
   |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:81:21
   |
81 |     while current > 0
   |           -------   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:85:30
   |
85 |         let quot = current / 2;
   |                    -------   ^ expected `nat`, found integer
   |                    |
   |                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:86:29
   |
86 |         let rem = current % 2;
   |                   -------   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_impl.rs:87:33
   |
87 |         let c: char = if rem == 0 { '0' } else { '1' };
   |                          ---    ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
